Table users as U{
    username varchar(255) [pk,unique,not null]
    hashed_password varchar(500) [not null]
    full_name varchar(255) [not null]
    mobile_number bigint [default: null]
    password_changed_at timestamptz [not null,default: `now()`]
    is_email_verified bool [not null,default:false]
    created_at timestamptz [not null,default: `now()`]

    indexes {
        username
    }
}

Table items as I {
    id int [pk,increment]
    name varchar(500) [not null,unique]
    price numeric [not null]
    created_by varchar(255) [ref:> U.username,not null]
    discount int [not null,default: 0]
    category varchar(255) [not null] 
    created_at timestamptz [not null,default: `now()`] 
    indexes{
        (id,name) 
    }

}

Table item_images as II{
    id serial [pk,increment]
    item_id int [ref: > I.id, not null]
    image_url varchar(500) [not null]
}

Table addresses as A{
    id int [pk,increment]
    username varchar(255) [ref: > U.username, not null]
    full_name varchar(255) [not null]
    country_code varchar(3) [not null]
    city varchar(10) [not null]
    street varchar(100) [not null]
    landmark varchar(100) [not null]
    mobile_number bigint [not null]
}
Table cart as C{
    username varchar(255) [ref: - U.username,not null]
    id int [pk,increment]
    total_value int [not null,default:0]
}

Table cart_items as IT{
    cart_id int [not null,ref: > C.id]
    item_id int [ref: > I.id,not null]
    quantity int [default: 1]

    indexes{
        cart_id
        (cart_id,item_id) [unique]
    }
}

Table sessions as s {
    id uuid [pk,unique]
    username varchar(255)   [not null,ref:> U.username]
    refresh_token varchar(500) [not null]
    client_ip varchar(255)  [not null]
    is_blocked bool [not null,default: false]
    expired_at timestamptz  [not null]
    created_at timestamptz  [not null,default:`now()`]
}